src/tests/data/SyntaxErrors/WrongKeyword.c

#include <stdio.h>

int main()
{
	printf("Hello world\n");
	Return 0;   // ERROR
}